# oxford-lhcb-wmass

./: CMakeLists.txt  Makefile  README.md  Zhist_plotting.py  chi2fitting.py  curvobs_plotting.py  plot_testing.py  run
cmake/modules/: FindPythia8.cmake
rootfiles/: create_templates.root
src/: CMakeLists.txt  TemplateStruct.cxx  TemplateStruct.h  Zsample_analysis.cxx  build_compare_histograms.cxx  create_templates.cxx  runPythia.cxx  test_options.cxx
